--- a/alyssa.html
+++ b/alyssa.html
@@ -69,7 +69,7 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="service-thumb">
                          <i class='fas fa-dog' style='font-size:48px'></i>
                          <h4>Pet Sitting</h4>
-                         <p>Keep your pets at home while you are gone. I will feed them on their schedule, walk and play with them and see snuggle them.</p>
+                         <p>Keep your pets at home while you are gone. I will feed them on their schedule, walk and play with them and snuggle them.</p>
                     </div>
                </div>
 
@@ -155,7 +155,7 @@ http://www.tooplate.com/view/2087-kalay
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
                          <h4 class="black-color">Pet Sitting</h4>
-                         <a href="images/alyssapig3.JPG" class="image-popup">
+                         <a href="images/alyssapig3_1.JPG" class="image-popup">
                               <div class="work-thumb-overlay">
                                    <p2>$40 per day includes mail pickup, basic house security check, 2 feeding times, walks, snuggles with at least 2 hours per day with your pets. Additional time: $10/hour.</p2>
                               </div>
@@ -168,7 +168,7 @@ http://www.tooplate.com/view/2087-kalay
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
                          <h4 class="black-color">House sitting</h4>
-                         <a href="images/alyssaheifer.JPG" class="image-popup">
+                         <a href="images/alyssaheifer_1.JPG" class="image-popup">
                               <div class="work-thumb-overlay">
                                    <p2>$30 per day includes mail pickup, basic house security check. Additional checks are $10 per check per day.</p2>
                               </div>
@@ -181,7 +181,7 @@ http://www.tooplate.com/view/2087-kalay
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
                          <h4 class="black-color">Animal Chores</h4>
-                         <a href="images/alyssahorse3.JPG" class="image-popup">
+                         <a href="images/alyssahorse3_1.JPG" class="image-popup">
                               <div class="work-thumb-overlay">
                                    <p2>$50 per day includes mail pickup, basic house security check, 2 feeding times per day for outside large breed animals.</p2>
                               </div>
