--- a/jindex.html
+++ b/jindex.html
@@ -111,9 +111,9 @@
                </div>
                <div class="col-md-5">
                   <div class="full slider_cont_section">
-                     <h4>More Featured in</h4>
-                     <h3>Jack Blogger</h3>
-                     <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look</p>
+                     <h4>The Longest</h4>
+                     <h3>Yarn</h3>
+                     <p>Rural nursing stories and crochet topics for your enjoyment.</p>
                      <div class="button_section">
                         <a href="jabout.html">Read More</a>
                         <a href="jcontact.html">Contact Us</a>
