--- a/jabout.html
+++ b/jabout.html
@@ -110,7 +110,7 @@
                </div>
                <div class="col-md-6">
                   <div class="full blog_cont">
-                     <h4>The biggest and most awesome camera  of  year</h4>
+                     <h4>Stories from a rural Emergency Department</h4>
                      <h5>MAY 14 2019 5 READ</h5>
                      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
                   </div>
@@ -122,7 +122,7 @@
                </div>
                <div class="col-md-6">
                   <div class="full blog_cont">
-                     <h4>What 3 years of android taught me the hard way</h4>
+                     <h4>Crochet projects I am working on</h4>
                      <h5>MAY 19 2019  5 READ</h5>
                      <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
                   </div>
