--- a/jabout.html
+++ b/jabout.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Jack Blogger</title>
+      <title>The Longest Yarn</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -42,7 +42,7 @@
                <div class="col-lg-3 logo_section">
                   <div class="full">
                      <div class="center-desk">
-                        <div class="logo"> <a href="jindex.html"><img src="jimages/logo.png" alt="#"></a> </div>
+                        <div class="logo"> <a href="jindex.html"><img src="jimages/LongestYarnFinal.png" alt="#"></a> </div>
                      </div>
                   </div>
                </div>
