--- a/jcontact.html
+++ b/jcontact.html
@@ -58,13 +58,13 @@
                                  <a href="jabout.html">About</a>
                               </li>
                               <li >
-                                 <a href="jmarketing.html">Marketing</a>
+                                 <a href="jmarketing.html">Crochet</a>
                               </li>
                               <li>
                                  <a href="jblog.html">Blog</a>
                               </li>
                               <li class="active">
-                                 <a href="jcontact.html">Contact us</a>
+                                 <a href="jcontact.html">Contact Me</a>
                               </li>
                               <li>
                                  <a href="#">Login</a>
@@ -90,7 +90,7 @@
       <div class="row">
          <div class="col-md-12">
             <div class="contactheading">
-               <h3>contact Us</h3>
+               <h3>contact Me</h3>
             </div>
          </div>
       </div>
@@ -155,9 +155,8 @@
                <div class="col-lg-4 col-md-6">
                   <a href="#"><img src="jimages/footer_logo.png" alt="#" /></a>
                   <ul class="contact_information">
-                     <li><span><img src="jimages/location_icon.png" alt="#" /></span><span class="text_cont">London 145<br>United Kingdom</span></li>
-                     <li><span><img src="jimages/phone_icon.png" alt="#" /></span><span class="text_cont">987 654 3210<br>987 654 3210</span></li>
-                     <li><span><img src="jimages/mail_icon.png" alt="#" /></span><span class="text_cont">demo@gmail.com<br>support@gmail.com</span></li>
+                     <li><span><img src="jimages/location_icon.png" alt="#" /></span><span class="text_cont">Rural Minnesota<br>United States</span></li>
+                     <li><span><img src="jimages/mail_icon.png" alt="#" /></span><span class="text_cont">jhugoson@icloud.com</span></li>
                   </ul>
                   <ul class="social_icon">
                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -193,7 +192,7 @@
                </div>
                <div class="col-lg-3 col-md-6">
                   <div class="footer_links">
-                     <h3>Contact us</h3>
+                     <h3>Contact Me</h3>
                      <form action="jindex.html">
                         <fieldset>
                            <div class="field">
@@ -261,8 +260,8 @@
 
 
    <!-- google map js -->
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8eaHt9Dh5H57Zh0xVTqxVdBFCvFMqFjQ&callback=initMap"></script>
-      <!-- end google map js -->
+      <!--script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8eaHt9Dh5H57Zh0xVTqxVdBFCvFMqFjQ&callback=initMap"></script>
+      <end google map js -->
 
 
    </body>
