--- a/contact.html
+++ b/contact.html
@@ -71,21 +71,49 @@
             <div class="container">
                 <div class="row section-title-container">
                     <div class="col-lg-12 text-uppercase text-center">
+                        <h2 class="section-title">Thanks for Coming to the</h2>
                         <h2 class="section-title">Wiley Reunion 2023</h2>
+                        <h2 class="section-title">June 25 2023</h2>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
-                        <p style="font-size:2vw">If you knew or know of Grandma Rudy, please join us Sunday June 25, 2023 at the Woodhaven Lodge, Villa Maria in Frontenac, MN. 
-                        </p>
+                        <!--p style="font-size:2vw">If you knew or know of Grandma Rudy, please join us Sunday June 25, 2023 at the Woodhaven Lodge, Villa Maria in Frontenac, MN. 
+                        </p-->
                         <figure class="crsl-item">
-                            <img src="img/savageheise.JPG" alt="Image" class="img-responsive img-thumbnail">
+                            <img src="img/reunion1.JPG" alt="Image" class="img-responsive img-thumbnail">
                         </figure>
+                        <figure class="crsl-item">
+                            <img src="img/reunion2.JPG" alt="Image" class="img-responsive img-thumbnail">
+                        </figure>
+                        <figure class="crsl-item">
+                            <img src="img/reunion3.JPG" alt="Image" class="img-responsive img-thumbnail">
+                        </figure>
+                        <figure class="crsl-item">
+                            <img src="img/reunion4.JPG" alt="Image" class="img-responsive img-thumbnail">
+                        </figure>
+                        <figure class="crsl-item">
+                            <img src="img/reunion5.JPG" alt="Image" class="img-responsive img-thumbnail">
+                        </figure>
+
+
                     </div>
                     <div class="col-lg-6 col-md-6">
-                        <p style="font-size:2vw"> We are planning a pot luck, come when you can. We plan to eat around 1. The Villa Maria is in Frontenac and recently updated for events - thanks Wayne! Bring your favorite card games and yard games!</p>
+                        <!--p style="font-size:2vw"> We are planning a pot luck, come when you can. We plan to eat around 1. The Villa Maria is in Frontenac and recently updated for events - thanks Wayne! Bring your favorite card games and yard games!</p-->
                         <figure class="crsl-item">
-                            <img src="img/reunionflyer.jpg" alt="Image" class="img-responsive img-thumbnail">
+                            <img src="img/reunion6.JPG" alt="Image" class="img-responsive img-thumbnail">
+                        </figure>
+                        <figure class="crsl-item">
+                            <img src="img/reunion7.JPG" alt="Image" class="img-responsive img-thumbnail">
+                        </figure>
+                        <figure class="crsl-item">
+                            <img src="img/reunion8.JPG" alt="Image" class="img-responsive img-thumbnail">
+                        </figure>
+                        <figure class="crsl-item">
+                            <img src="img/reunion9.JPG" alt="Image" class="img-responsive img-thumbnail">
+                        </figure>
+                        <figure class="crsl-item">
+                            <img src="img/reunion10.JPG" alt="Image" class="img-responsive img-thumbnail">
                         </figure>
                     </div>
                     <div class="col-lg-6 col-md-6">
@@ -107,7 +135,7 @@
                         <a href="https://docs.google.com/spreadsheets/d/1TLY_KYfDsOgM2dAChKsT1N_KMNMsj_4ejyFRHsD_naw/edit?usp=sharing"> * This is a public sheet so only share information you are willing to have available to all. *</a>
                         <br>
                         <br>
-                        <a href="https://docs.google.com/spreadsheets/d/1Ob7dYYuw4GLrL5dBjzWrEI8b6zuNwLHZctLe7DrXuKI/edit?usp=sharing"> Food list if you care to share what you plan to bring. </a>
+                        <!--a href="https://docs.google.com/spreadsheets/d/1Ob7dYYuw4GLrL5dBjzWrEI8b6zuNwLHZctLe7DrXuKI/edit?usp=sharing"> Food list if you care to share what you plan to bring. </a-->
                         <br>
                         <br>    
                         <a href="https://www.villamariamn.com/" target="_blank">More information about the Villa Maria  </a>
